--- a/WebApp/wwwroot/genomes.html
+++ b/WebApp/wwwroot/genomes.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Genomes</title>
-    <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="index.html">Viruses</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">FEWFWEEFt</span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="genomes.html">Genomes</a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
     <h1>Genomes</h1>
     <h3>Add Genome</h3>
     <form action="javascript:void(0);" method="POST" onsubmit="addGenome()">
