--- a/WebApp/wwwroot/genomes.html
+++ b/WebApp/wwwroot/genomes.html
@@ -24,23 +24,33 @@
     <h1>Genomes</h1>
     <h3>Add Genome</h3>
     <form action="javascript:void(0);" method="POST" onsubmit="addGenome()">
-        <input type="text" id="add-nameGen" placeholder="New Genome">
-        <input type="text" id="add-strand" placeholder="New Strand">
-        <input type="text" id="add-sense" placeholder="New Sense">
-        <input type="submit" value="Add">
+        <input type="text" id="add-nameGen" class="form-control" placeholder="New Genome">
+        <input type="text" id="add-strand" class="form-control" placeholder="New Strand">
+        <input type="text" id="add-sense" class="form-control" placeholder="New Sense">
+        <input type="submit" value="Add" class="btn btn-success">
     </form>
+
+    <div>
+        <label class="invalid-feedback" id="add-gn"></label>
+        <label class="invalid-feedback" id="add-gs"></label>
+        <label class="invalid-feedback" id="add-gss"></label>
+    </div>
 
     <div id="editGenome">
         <h3>Edit</h3>
         <form action="javascript:void(0);" onsubmit="updateGenome()">
             <input type="hidden" id="edit-idGen">
-            <input type="text" id="edit-nameGen">
-            <input type="text" id="edit-strand">
-            <input type="text" id="edit-sense">
-            <input type="submit" value="Save">
+            <input type="text" class="form-control" id="edit-nameGen">
+            <input type="text" class="form-control" id="edit-strand">
+            <input type="text" class="form-control" id="edit-sense">
+            <input type="submit" value="Save" class="btn btn-info">
         </form>
     </div>
-
+    <div>
+        <label class="invalid-feedback" id="ed-gn"></label>
+        <label class="invalid-feedback" id="ed-gs"></label>
+        <label class="invalid-feedback" id="ed-gss"></label>
+    </div>
     <p id="counter"></p>
 
     <table>
