--- a/WebApp/wwwroot/scientists.html
+++ b/WebApp/wwwroot/scientists.html
@@ -20,6 +20,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="scientists.html">Scientists</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="organisms.html">Organisms</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="disc.html">Discoveries</a>
+                </li>
             </ul>
 
         </div>
